2010-09-15  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15708: No separate configuration possible if only port differs
	* Fixed problem: decoding of path override did not work for non-default language

2010-09-09  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15665: Method to manually set the host during URL encoding
	* Fixed bug #15602: key is too long
	* Added database fields for overriding path segment completely
	* Fixed bug #15665: Method to manually set the host during URL encoding
	* Fixed bug #15602: key is too long
	* Added resolving of back path to id (initial version)

2010-09-08  Dmitry Dulepov  <dmitry@typo3.org>

	* Refactoring modfunc1/index.php
	* Refactor redirect view and add search to it
	* Added a page browser to the redirect view

2010-08-31  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed forge issue #9285: t3blog problems with RealURL when using file names
	* Updated copyright information
	* Removed unused modules

2010-08-30  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #14780: Resolving incorrect id when only language-preVar gets passed (thanks to Bernhard Kraft)
	* Fixed bug #15481: Visibility of tx_realurl_advanced::encodeTitle()
	* Fixed bug #10774: localized pagePath encoding by tx_realurl_advanced not working when using new _DOMAINS config
	* Fixed bug #14266: set as redirect does not work
	* Fixed bug #15599: Pressing "Cancel" in redirect view does not hide the form
	* Released version 1.9.4

2010-08-25  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15552: Impossible to have file names on the root page
	* Fixed bug #15335: PHP Warning: Invalid argument supplied for foreach() in class.tx_realurl_tcemain
	* Fixed bug #15435: Editing of redirects not possible anymore
	* Fixed bug #15366: uniqalias for an item with the same name is rotatory generated als -1 and -2 (thanks to David Frerich)

2010-06-22  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14815: missing extension configuration causes PHP errors